--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-axios": "^3.2.4",
-    "vue-scroll-loader": "^2.2.0"
+    "vue-axios": "^3.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
